# Renov-Design

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  docker-compose.yml  justfile  mypy.ini  pyproject.toml  setup.sh  test.py
.devcontainer/: .env.template  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: github-actions-demo.yml  github-actions.yml
front_service/: Dockerfile  README.md  package-lock.json  package.json  server.js  vite.config.js
front_service/src/: main.js
front_service/src/components/Generation/: GenerationForm.vue
front_service/src/components/Header/: Header.vue
front_service/src/components/History/: HistoryCard.vue
front_service/src/components/Login/: LoginForm.vue
front_service/src/components/Signup/: SignupForm.vue
front_service/src/router/: index.js
front_service/src/views/: Backip.vue  GenerationView.vue  Home.vue  HomeView.vue  LoginView.vue  PastGenerationsView.vue  SignUpView.vue
gateway_service/: pyproject.toml
generation_service/: Dockerfile  pyproject.toml
generation_service/generation_service/: main.py
payment_service/: pyproject.toml
scripts/: install.sh
stockage_service/: Dockerfile  generate_docs.py  pyproject.toml  requirements.txt
stockage_service/stockage_service/: main.py
stockage_service/stockage_service/commons/: errors.py  utils.py
stockage_service/stockage_service/controller/: controller.py  global_parameters.py
stockage_service/stockage_service/docs/source/: conf.py  index.rst  infrastructure.api.bootstrap.rst  infrastructure.api.stockage_api_rest.api.rst  infrastructure.api.stockage_api_rest.api_models.rst  infrastructure.api.stockage_api_rest.dto_prompt.rst  infrastructure.api.technical_api_rest.api.rst  infrastructure.spi.repository.stockage_repository_mongo.bootstrap.rst  infrastructure.spi.repository.stockage_repository_mongo.stockage_dto_mongo.rst  infrastructure.spi.repository.stockage_repository_mongo.stockage_repository_mongo.rst
stockage_service/stockage_service/domains/stockage/: stockage_services.py
stockage_service/stockage_service/domains/stockage/interfaces/: stockage_repository_mongo.py
stockage_service/stockage_service/domains/stockage/models/: prompt.py
stockage_service/stockage_service/domains/stockage/use_case/: stockage_delete_prompts_use_case.py  stockage_get_prompts_use_case.py  stockage_initialisation_use_case.py  stockage_storage_use_case.py
stockage_service/stockage_service/infrastructure/api/: bootstrap.py
stockage_service/stockage_service/infrastructure/api/stockage_api_rest/: api.py  api_models.py  dto_prompt.py
stockage_service/stockage_service/infrastructure/api/technical_api_rest/: api.py
stockage_service/stockage_service/infrastructure/spi/repository/stockage_repository_mongo/: bootstrap.py  stockage_dto_mongo.py  stockage_repository_mongo.py
user-service/: app.py  models.py  piccolo_conf.py  pyproject.toml
user_service/: Dockerfile  config.py  install.sh  piccolo_conf.py  pyproject.toml  run.py
user_service/app/: __init__.py  controllers.py  create_app.py  models.py  piccolo_app.py  smtp.py  token_required.py  views.py
user_service/app/swagger/: create_account.yml  delete_user.yml  get_user.yml  get_user_by_id.yml  login.yml  logout.yml  register_user.yml  update_password.yml  update_user.yml
user_service/front/: home_loging.php  login.php
