[tool.poetry]
name = "renov-design"
version = "0.1.0"
description = ""
authors = ["AlexianeBA <barbealexiane07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
