[tool.poetry]
name = "renov-design"
version = "0.1.0"
description = ""
authors = ["AlexianeBA <barbealexiane07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
django = "^5.0.7"
pre-commit = "^3.7.1"
black = "^24.4.2"
piccolo = "^1.13.1"
piccolo-api = "^1.4.0"
asyncpg = "^0.29.0"
bcrypt = "^4.1.3"
flasgger = "^0.9.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
