[tool.poetry]
name = "generation-service"
version = "0.1.0"
description = ""
authors = ["Jilvo <jmillot41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
diffusers = "^0.30.0"
transformers = "^4.44.0"
accelerate = "^0.33.0"
flask = "^3.0.3"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
